continued runtime view DD

--- a/DD/Files/implementation.tex
+++ b/DD/Files/implementation.tex
@@ -4,7 +4,7 @@ This approach is preferred because it allows to test the system as soon as possi
 External services do not need to be tested, as it is assumed that they are already tested and reliable.
 The testing will be performed in parallel with the implementation, and will be carried at different levels: unit testing, integration testing and system testing.
 Regression testing will be performed at each level, to ensure that new changes do not break existing functionalities.
-Also user acceptance testing is considered, to ensure that the final system meets the requirements of the customer.
+Also user acceptance testing is considered, to ensure that the final system meets the requirements of the customer. \\
 
 \subsection{Plan}
 In the first step, components that do not rely on others will be implemented and tested. These are the ServiceRegistry, EventQueue, NotificationQueue and SubmissionQueue components.
