--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -6,14 +6,14 @@
 \fancyhf{}
 \fancyhead[L]{\slshape\rightmark}
 \fancyhead[R]{\slshape\leftmark}
-\fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{RASD}}
+\fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{DD}}
 \fancyfoot[R]{\thepage}
 \renewcommand{\footrulewidth}{0.4pt}
 
 \fancypagestyle{noheader}{
   \fancyhf{} 
   \renewcommand{\headrulewidth}{0pt} % no header
-  \fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{RASD}}
+  \fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{DD}}
   \fancyfoot[R]{\thepage}
   \renewcommand{\footrulewidth}{0.4pt}
 }
