completed first draft for traceability matrix DD

--- a/DD/Files/req_trac.tex
+++ b/DD/Files/req_trac.tex
@@ -1,20 +1,77 @@
+TODO: check for correctness and completeness\\
+The next table is used to map the requirements presented in the RASD with the components of the system that satisfy them. The name of the components have been shortened to:
+\begin{itemize}
+    \item \textbf{WA}: Web Application
+    \item \textbf{AG}: Api Gateway
+    \item \textbf{AS}: Authentication Service
+    \item \textbf{TS}: Tournament Service
+    \item \textbf{GS}: GitHub Integration Service
+    \item \textbf{EvaS}: Evaluation Service
+    \item \textbf{EveS}: Event Service
+    \item \textbf{NS}: Notification Service
+\end{itemize}
+
+\newpage
+\thispagestyle{noheader}
 \begin{table}[H]
     \centering
-    \begin{tabular}{c|ccc}
+    \vspace{-4cm}
+    \begin{tabular}{c|cccccccc}
         \toprule
         \textbf{Requirement} &
-        \textbf{Component1} &
-        \textbf{Component2} &
-        \textbf{Component3} \\
+        \textbf{WA} &
+        \textbf{AG} &
+        \textbf{AS} &
+        \textbf{TS} &
+        \textbf{GS} &
+        \textbf{EvaS} &
+        \textbf{EveS} &
+        \textbf{NS}\\
 
         \midrule
-        \textbf{R1} & \checkmark & \checkmark &  \\
-        \textbf{R2} & \checkmark & &  \\
-        \textbf{R3} & & & \\
-        \midrule
-        \textbf{G1} & \checkmark & & \\
-        
+        \textbf{R1} & \checkmark & \checkmark  & \checkmark &  &  &  &  & \\
+        \textbf{R2} & \checkmark & \checkmark  & \checkmark &  &  &  &  & \\
+        \textbf{R3} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R4} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R5} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R6} &  &  &  &  &  &  &  & \checkmark \\
+        \textbf{R7} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R8} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R9} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R10} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R11} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R12} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R13} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R14} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R15} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R16} &  &  &  & \checkmark &  &  &  & \checkmark \\
+        \textbf{R17} &  &  &  & \checkmark & \checkmark & \checkmark &  & \\
+        \textbf{R18} &  &  &  & \checkmark & \checkmark &  & \checkmark & \checkmark \\
+        \textbf{R19} &  &  &  & \checkmark & \checkmark &  & \checkmark & \\
+        \textbf{R20} &  &  &  & \checkmark &  & \checkmark &  & \\
+        \textbf{R21} &  &  &  & \checkmark &  & \checkmark &  & \\
+        \textbf{R22} &  &  &  & \checkmark &  & \checkmark & \checkmark & \\
+        \textbf{R23} &  &  &  & \checkmark &  & \checkmark & \checkmark & \checkmark \\
+        \textbf{R24} &  &  &  & \checkmark &  & \checkmark & \checkmark & \\
+        \textbf{R25} &  &  &  & \checkmark &  & \checkmark & \checkmark & \checkmark \\
+        \textbf{R26} &  &  &  & \checkmark &  &  &  & \\
+        \textbf{R27} &  &  &  & \checkmark &  &  &  & \\
+        \textbf{R28} &  &  &  & \checkmark &  &  &  & \\
+        \textbf{R29} &  &  &  & \checkmark &  & \checkmark &  & \\
+        \textbf{R30} & \checkmark & \checkmark &  & \checkmark &  &  & \checkmark  & \\
+        \textbf{R31} & \checkmark & \checkmark &  & \checkmark &  &  & \checkmark  & \\
+        \textbf{R32} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R33} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R34} & \checkmark & \checkmark &  & \checkmark &  &  & \checkmark  & \\
+        \textbf{R35} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R36} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R37} &  &  &  & \checkmark &  &  &  & \\
+        \textbf{R38} &  & \checkmark &  &  &  &  &  & \\
+        \textbf{R39} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R40} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R41} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
+        \textbf{R42} & \checkmark & \checkmark &  & \checkmark &  &  &  & \\
         \bottomrule
     \end{tabular}
-    \caption{\textit{Traceability matrix} for requirements R.1 to R.14.}
+    \caption{Traceability matrix}
 \end{table}
