--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -46,7 +46,7 @@
 \usepackage{alloy}
 \usepackage{graphicx}
 \usepackage{amssymb}
-
+\usepackage{booktabs}
 % Some utilities
 \input{util/highlight}
 \input{util/abbrev}
