updated runtime view DD

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -349,7 +349,7 @@ This representation of the system's interfaces is only for illustrative purposes
 TODO: check for missing text\\
 In this section the most important runtime scenarios of the system are presented, highlighting the interactions between different components and, eventually, external entities.
 
-For the sake of brevity, the retrival of dynamic content used to populate the pages rendered by the web server is not shown, so that only the most important exchanges can be represented.
+For the sake of brevity, the retrival of services' URLs and dynamic content used to populate the pages rendered by the web server are not shown, so that only the most important exchanges can be represented.
 
 \subsubsection{Service Registry}
 The Service Registry is a critical component of the system, since it is responsible for the service discovery functionality, on which the microservice architecture is based. This is achieved by allowing 3 fundamental operations:
