completed effort DD and uploaded delivery

--- a/DD/Files/effort.tex
+++ b/DD/Files/effort.tex
@@ -1,9 +1,25 @@
-\begin{tabular}{|c|c|c|c|c|}
-    \hline
-    \textbf{Name and Surname} & \textbf{Section 1} & \textbf{Section 2} & \textbf{Section 3} & \textbf{Section 4} \\
-    \hline
-    Tommaso Capacci & 10 & 10 & 10 & 10 \\
-    \hline
-    Gabriele Ginestroni & 10 & 10 & 10 & 10 \\
-    \hline
-\end{tabular}
+\begin{center}
+    \begin{tabular}{ |c|m{2.5cm}| }
+        \hline
+        \textbf{Name and Surname} & \textbf{Effort} \\
+        \hline
+        Tommaso Capacci &
+        \begin{enumerate}
+            \item 5h
+            \item 22h
+            \item 20h
+            \item 5h
+            \item 4h
+        \end{enumerate} \\
+        \hline
+        Gabriele Ginestroni &
+        \begin{enumerate}
+            \item 1h
+            \item 27h
+            \item 20h
+            \item 2h
+            \item 8h
+        \end{enumerate} \\
+        \hline
+    \end{tabular}
+\end{center}
