fixed minor typos DD

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -270,7 +270,8 @@ The interfaces of the system's components are described in terms of the methods 
         \item setTournamentState(tournamentId,tournamentState): none
         \item retrieveBattleData(tournamentId,battleId): battleData
         \item retrieveTournamentData(tournamentId): tournamentData
-        \item updateTournamentRankAndScores(tournamentId,tournamentRank,tournamentScores): none
+        \item updateTournamentRankAndScores(tournamentId,tournamentRank,
+        tournamentScores): none
         \item updateBattleRank(tournamentId,battleId,battleRank): none
         \item addCollaborator(tournamentId,collaboratorId): none
         \item retrieveBattleDataByTeamId(teamId): battleData
