--- a/DD/Files/req_trac.tex
+++ b/DD/Files/req_trac.tex
@@ -1,4 +1,4 @@
-The next table is used to map the requirements presented in the RASD with the components of the system that satisfy them. The name of the components have been shortened to:
+The next table is used to map the requirements presented in the RASD with the components of the system that satisfy them. The names of the components have been shortened to:
 \begin{itemize}
     \item \textbf{WA}: Web Application
     \item \textbf{AG}: Api Gateway
