better clarified component diagram description

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -64,9 +64,9 @@ The components in Figure \ref{component_diagram} are :
     \item \textbf{TournamentService}: this component is the microservice that implements most of the functionalities needed by the users. It handles:
     \begin{itemize}
         \item Management of tournaments and battles: it allows the creation of battle and tournaments, enrollment of students to tournaments and battles.
-        \item Management of events regarding tournaments and battles.
+        \item Creation of events regarding tournaments and battles.
         \item Management of the ranking of the students.
-        \item Management of data related to tournaments, battles and submissions
+        \item Management of data related to tournaments, battles, teams and submissions.
         \item Manual evaluation of the submissions of the students.
     \end{itemize}
     It is composed of the following subcomponents:
