new RASD version

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -46,7 +46,7 @@ For a smoother experience, students will receive email notifications about the m
 According to the paper "The World and the Machine" by M.Jackson and P.Zave, in order to correctly describe the application domain, the phenomena involved in it must be identified and categorized. The following table describes the world, shared and the machine phenomena, including the reference to which part controls the phenomena.
 \begin{table}[H]
     \rowcolors{3}{blue!15}{white}
-    \vspace{-3cm}
+    \vspace{-3.5cm}
     \hspace{-0.4cm}
     \begin{tabular}{|p{9.5cm}|p{2cm}|p{1.5cm}|}
         \hline
@@ -54,6 +54,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
         Phenomenon & Controlled & Shared \\
         \hline
         Educator decides to challenge his students & W & N \\
+        Educator crafts Code Kata & W & N \\
         Student wants to improve his coding skills & W & N \\
         Students communicate with each other & W & N \\
         Student invites another student to join his team & W & N \\
@@ -68,6 +69,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
         Educator closes the battle's consolidation stage & W & Y \\
         Educator terminates a tournament & W & Y \\
         Educator submits manual optional evaluation  & W & Y \\
+        Student enrolls to tournament & W & Y \\
         Student creates a team & W & Y \\
         Student joins a team & W & Y \\
         User checks list of ongoing tournaments and ranks & W & Y \\
@@ -91,7 +93,6 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
         System evaluates timeliness of a submission & M & N \\
         \hline
     \end{tabular}
-    \caption{Phenomena table}
 \end{table}
 
 \newpage
@@ -143,8 +144,9 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
 \newpage
 \subsection{Revision History}
 \begin{itemize}
-    \item December 22, 2023: version 1.0 (first release)
-    \item \today: version 2.0 (fixed some typos)
+    \item December 22, 2023: version 1 (first release)
+    \item December 31, 2023: version 2 (fixed typos)
+    \item \today: version 3 (fixed "Assumptions, Dependencies and Constraints" section layout and added "Educator crafts Code Kata" and "Student enrolls to tournament" phenomena)
 \end{itemize}
 
 \subsection{Reference Documents}
