--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -122,6 +122,8 @@ The system sends notifications (by means of emails) to its users in the followin
     \item on tournament closure, all subscribed students are notified
 \end{itemize}
 
+\newpage
+\thispagestyle{noleftheader}
 \subsection{User characteristics}
 \subsubsection{User types}
 As previously mentioned, the system is meant to be used by 2 kind of users:
@@ -139,6 +141,8 @@ In particular, the zip file must contain:
 \end{itemize}
 This separation also allows the system to understand which files must be uploaded on the GitHub repository and which not (i.e. test cases, since they must not be visible to students).
 
+\newpage
+\thispagestyle{noleftheader}
 \subsection{Assumptions, dependencies and constraints}
 \subsubsection{Domain assumptions}
 \begin{enumerate}[label=$\bullet$ \textbf{D\arabic*:}]
