--- a/RASD/rasd.tex
+++ b/RASD/rasd.tex
@@ -10,6 +10,14 @@
 \fancyfoot[R]{\thepage}
 \renewcommand{\footrulewidth}{0.4pt}
 
+\fancypagestyle{noleftheader}{
+  \fancyhf{} 
+  \fancyhead[R]{\slshape\leftmark}
+  \fancyfoot[L]{\textbf{CodeKataBattle}\quad\quad\quad\quad\quad\quad\quad\emph{RASD}}
+  \fancyfoot[R]{\thepage}
+  \renewcommand{\footrulewidth}{0.4pt}
+}
+
 \fancypagestyle{noheader}{
   \fancyhf{} 
   \renewcommand{\headrulewidth}{0pt} % no header
